--- a/ASSIGNMENT_3_v7.ipynb
+++ b/ASSIGNMENT_3_v7.ipynb
@@ -2694,7 +2694,7 @@
       },
       "outputs": [],
       "source": [
-        "# Import new libs\n",
+        "# import new libs\n",
         "\n",
         "#umap\n",
         "!pip install umap-learn -q\n",
@@ -4805,11 +4805,11 @@
         "# Select optimal k (for this, we select 4, since the difference between 4-5 is small, and 3-4 is a bit bigger)\n",
         "optimal_k = 4\n",
         "\n",
-        "# Udfør K-means clustering\n",
+        "# K-means clustering\n",
         "kmeans = KMeans(n_clusters=optimal_k, random_state=42)\n",
         "kmeans_labels = kmeans.fit_predict(data_to_cluster_scaled)\n",
         "\n",
-        "# Visualiser K-means resultater\n",
+        "# visualize K-means results\n",
         "plt.figure(figsize=(10, 8))\n",
         "scatter = plt.scatter(data_scaled_pca[:, 0], data_scaled_pca[:, 1], c=kmeans_labels, cmap='viridis')\n",
         "plt.title('K-means Clustering (PCA)')\n",
